syntax="proto3";

option go_package = "bookstore/protos";

package protos;

import "google/protobuf/timestamp.proto";

service Bookstore {
  rpc buy(BuyReq) returns (BuyResp) {}
  rpc search(SearchReq) returns (SearchResp) {}
}

// models
message Book {
  string id =1;
  string title = 2;
  string author = 3;
  uint32 price = 4;
  google.protobuf.Timestamp createdAt = 5;
}


// requests
message BuyReq {
  string bookId = 1;
  uint32 quantity = 2;
}

message SearchReq {
  string SearchTerm = 1;
  uint32 page = 2;
  uint32 perPage = 3;
}

// responses
message BuyResp {
  enum RespStatus {
    OK = 0;
    ERROR = 1;
  }

  RespStatus status = 1;
  string orderId = 2;
  uint32 price = 3;
}

message SearchResp {
  repeated Book result = 1;
  uint32 totalCount = 2;
}

